:hammer: blog 설정 오류 수정 작업 및 속성 변경

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,3 +6,6 @@
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+$link-color: red;
+$doc-font-size: 13px;
