--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -5,16 +5,19 @@
 .archive {
   margin-top: 1em;
   margin-bottom: 2em;
+  padding: 0 2rem;
+  background: #fff;
+  -webkit-box-shadow: 1px 2px 10px #e7e7e7;
+  -moz-box-shadow: 1px 2px 10px #e7e7e7;
+  box-shadow: 1px 2px 10px #e7e7e7;
 
   @include breakpoint($large) {
     float: right;
     width: calc(100% - #{$right-sidebar-width-narrow});
-    padding-right: $right-sidebar-width-narrow;
   }
 
   @include breakpoint($x-large) {
     width: calc(100% - #{$right-sidebar-width});
-    padding-right: $right-sidebar-width;
   }
 }
 
