--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -56,8 +56,9 @@
   margin-top: 1em;
   padding-top: 1em;
   width: 100%;
-
+  text-align: center;
   ul {
+    display: inline-block;
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -196,6 +197,7 @@
 
     &.site-title {
       margin-left: 0;
+      color: $link-color;
     }
   }
 
