--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -23,12 +23,12 @@
   @include breakpoint($large) {
     float: right;
     width: calc(100% - #{$right-sidebar-width-narrow});
-    padding-right: $right-sidebar-width-narrow;
+    padding-right: 0;
   }
 
   @include breakpoint($x-large) {
     width: calc(100% - #{$right-sidebar-width});
-    padding-right: $right-sidebar-width;
+    padding-right: 0;
   }
 
   .page__inner-wrap {
@@ -38,6 +38,11 @@
     margin-right: 0;
     width: 100%;
     clear: both;
+    padding: 2rem;
+    background: #fff;
+    -webkit-box-shadow: 1px 2px 10px #e7e7e7;
+    -moz-box-shadow: 1px 2px 10px #e7e7e7;
+    box-shadow: 1px 2px 10px #e7e7e7;
 
     .page__content,
     .page__meta,
@@ -55,6 +60,7 @@
 .page__title {
   margin-top: 0;
   line-height: 1;
+  color: #222222;
 
   & + .page__meta {
     margin-top: -0.5em;
@@ -75,7 +81,7 @@
   p,
   li,
   dl {
-    font-size: 1em;
+    font-size: .75rem;
   }
 
   /* paragraph indents */
@@ -469,8 +475,12 @@
   @include clearfix();
   float: left;
   margin-top: 2em;
-  padding-top: 1em;
   border-top: 1px solid $border-color;
+  background: #fff;
+  padding: 1rem 2rem;
+  -webkit-box-shadow: 1px 2px 10px #e7e7e7;
+  -moz-box-shadow: 1px 2px 10px #e7e7e7;
+  box-shadow: 1px 2px 10px #e7e7e7;
 
   @include breakpoint($large) {
     float: right;
