--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -19,7 +19,6 @@
   @include breakpoint($large) {
     float: left;
     width: calc(#{$right-sidebar-width-narrow} - 1em);
-    opacity: 0.75;
     -webkit-transition: opacity 0.2s ease-in-out;
     transition: opacity 0.2s ease-in-out;
 
@@ -43,6 +42,13 @@
   > * {
     margin-top: 1em;
     margin-bottom: 1em;
+    text-align: center;
+  }
+
+  > div {
+    padding: 1rem;
+    background: #fff;
+    box-shadow: -3px 1px 10px #e7e7e7;
   }
 
   h2,
@@ -56,7 +62,7 @@
 
   p,
   li {
-    font-family: $sans-serif;
+    font-family: $serif;
     font-size: $type-size-6;
     line-height: 1.5;
   }
@@ -128,12 +134,6 @@
 
   img {
     max-width: 110px;
-    border-radius: 50%;
-
-    @include breakpoint($large) {
-      padding: 5px;
-      border: 1px solid $border-color;
-    }
   }
 }
 
@@ -166,7 +166,7 @@
   }
 }
 .sidebar .author__name {
-  font-family: $sans-serif;
+  font-family: $serif;
   font-size: $type-size-5;
 }
 
@@ -183,7 +183,7 @@
   position: relative;
   display: table-cell;
   vertical-align: middle;
-  font-family: $sans-serif;
+  font-family: $serif;
   z-index: 10;
   position: relative;
   cursor: pointer;
