:hammer: 카테고리 목록추가 ..여러시도중

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,3 +1,12 @@
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135034014-2"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-135034014-2');
+</script>
 <link rel="apple-touch-icon" sizes="57x57" href="/blog/assets/images/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/blog/assets/images/favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/blog/assets/images/favicon/apple-icon-72x72.png">
