--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -1,6 +1,10 @@
 /* ==========================================================================
    SINGLE PAGE/POST
    ========================================================================== */
+.tag-list {
+  padding: 0;
+  word-break: keep-all;
+}
 
 #main {
   @include clearfix;
@@ -58,7 +62,7 @@
 }
 
 .page__title {
-  margin-top: 0;
+  margin-top: 1.414em;
   line-height: 1;
   color: #222222;
 
@@ -356,6 +360,9 @@
     color: inherit;
     text-decoration: none;
     border-bottom: 1px solid $border-color;
+    * {
+      font-weight: 300;
+    }
   }
 }
 
