--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -5,13 +5,14 @@
 .archive {
   margin-top: 1em;
   margin-bottom: 2em;
-  padding: 0 2rem;
+  padding: 0.1rem 1rem;
   background: #fff;
   -webkit-box-shadow: 1px 2px 10px #e7e7e7;
   -moz-box-shadow: 1px 2px 10px #e7e7e7;
   box-shadow: 1px 2px 10px #e7e7e7;
 
   @include breakpoint($large) {
+    padding: 0 2rem;
     float: right;
     width: calc(100% - #{$right-sidebar-width-narrow});
   }
