--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -42,7 +42,10 @@
     margin-right: 0;
     width: 100%;
     clear: both;
-    padding: 2rem;
+    padding: 1rem;
+    @include breakpoint($large) {
+      padding: 2rem;
+    }
     background: #fff;
     -webkit-box-shadow: 1px 2px 10px #e7e7e7;
     -moz-box-shadow: 1px 2px 10px #e7e7e7;
@@ -62,7 +65,9 @@
 }
 
 .page__title {
-  margin-top: 1.414em;
+  @include breakpoint($x-large) {
+    margin-top: 1.414em;
+  }
   line-height: 1;
   color: #222222;
 
